// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResizeBounding > classes > prefix > should have custom prefix (my-prefix) 1`] = `
[
  "my-prefixcontainer",
  "my-prefixcontainer-5",
]
`;

exports[`ResizeBounding > classes > prefix > should have default prefix (%s) 1`] = `
[
  "resize-bounding-container",
  "resize-bounding-container-0",
]
`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--b) 1`] = `0`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--h) 1`] = `0`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--l) 1`] = `0`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--r) 1`] = `0`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--t) 1`] = `0`;

exports[`ResizeBounding > components > Should not display any selected borders when set to "disabled" (--v) 1`] = `0`;

exports[`ResizeBounding > components > should not render any pane element 1`] = `0`;

exports[`ResizeBounding > components > should not render any pane element 2`] = `0`;

exports[`ResizeBounding > components > should not render any pane element 3`] = `0`;

exports[`ResizeBounding > components > should render bl panes (panes computed value) 1`] = `2`;

exports[`ResizeBounding > components > should render bltr panes (panes computed value) 1`] = `4`;

exports[`ResizeBounding > components > should render ltrb panes (panes computed value) 1`] = `4`;

exports[`ResizeBounding > components > should render rl panes (panes computed value) 1`] = `2`;

exports[`ResizeBounding > components > should render tr panes (panes computed value) 1`] = `2`;

exports[`ResizeBounding > events > drag > check aliases: should emit "drag:start" with direction argument "{ alias: 'h', directions: [ 'r', 'l' ] }" 1`] = `
[
  "r",
  "l",
]
`;

exports[`ResizeBounding > events > drag > check aliases: should emit "drag:start" with direction argument "{ alias: 'v', directions: [ 't', 'b' ] }" 1`] = `
[
  "t",
  "b",
]
`;

exports[`ResizeBounding > events > drag > should emit the "drag:start -> drag:move -> drag:end" event, which takes a direction argument "b" 1`] = `
[
  "b",
  "b",
  "b",
]
`;

exports[`ResizeBounding > events > drag > should emit the "drag:start -> drag:move -> drag:end" event, which takes a direction argument "l" 1`] = `
[
  "l",
  "l",
  "l",
]
`;

exports[`ResizeBounding > events > drag > should emit the "drag:start -> drag:move -> drag:end" event, which takes a direction argument "r" 1`] = `
[
  "r",
  "r",
  "r",
]
`;

exports[`ResizeBounding > events > drag > should emit the "drag:start -> drag:move -> drag:end" event, which takes a direction argument "t" 1`] = `
[
  "t",
  "t",
  "t",
]
`;

exports[`ResizeBounding > slots > should render default slot 1`] = `
"<div data-testid="resize-bounding-container" class="resize-bounding-container resize-bounding-container-0">
  <p>Inner Container</p>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`ResizeBounding > slots > should render default slot 2`] = `"knob"`;

exports[`ResizeBounding > styles > container > should apply custom styles ({ background: 'red' }) 1`] = `"width: 320px; min-width: 320px; height: 400px; min-height: 400px;"`;

exports[`ResizeBounding > styles > container > should apply inline styles ({ background: 'blue', display: 'flex' }) 1`] = `"background: blue; display: flex;"`;
